<resources>
    <string name="app_name">Trickster MOD</string>
    <string name="activity_nate_icon">com.bigeyes0x0.trickstermod.main.Activity-Nate</string>
    <string name="activity_bacon_icon">com.bigeyes0x0.trickstermod.main.Activity-Bacon</string>
    <string name="bug_report_hint">"Only use English in report
Before reporting your problem, please read the FAQ first"</string>
    <string name="gg_play">Google Play</string>
    <string name="paypal">Paypal</string>
    <string name="unit_c">°C</string>
    <string name="unit_f">°F</string>
    <string name="HP_CONTROL_NWNS_THRESHOLD_0_LAB">hotplug_cpu1</string>
    <string name="HP_CONTROL_NWNS_THRESHOLD_1_LAB">unplug_cpu0</string>
    <string name="HP_CONTROL_NWNS_THRESHOLD_2_LAB">hotplug_cpu2</string>
    <string name="HP_CONTROL_NWNS_THRESHOLD_3_LAB">unplug_cpu1</string>
    <string name="HP_CONTROL_NWNS_THRESHOLD_4_LAB">hotplug_cpu3</string>
    <string name="HP_CONTROL_NWNS_THRESHOLD_5_LAB">unplug_cpu2</string>
    <string name="HP_CONTROL_NWNS_THRESHOLD_6_LAB">hotplug_cpu4</string>
    <string name="HP_CONTROL_NWNS_THRESHOLD_7_LAB">unplug_cpu3</string>
    <string name="HP_CONTROL_TWTS_THRESHOLD_0_LAB">hotplug_cpu1</string>
    <string name="HP_CONTROL_TWTS_THRESHOLD_1_LAB">unplug_cpu0</string>
    <string name="HP_CONTROL_TWTS_THRESHOLD_2_LAB">hotplug_cpu2</string>
    <string name="HP_CONTROL_TWTS_THRESHOLD_3_LAB">unplug_cpu1</string>
    <string name="HP_CONTROL_TWTS_THRESHOLD_4_LAB">hotplug_cpu3</string>
    <string name="HP_CONTROL_TWTS_THRESHOLD_5_LAB">unplug_cpu2</string>
    <string name="HP_CONTROL_TWTS_THRESHOLD_6_LAB">hotplug_cpu4</string>
    <string name="HP_CONTROL_TWTS_THRESHOLD_7_LAB">unplug_cpu3</string>
    <string name="ANDROID_PROFILE_LAB">android</string>
    <string name="ANARKIA_PROFILE_LAB">anarkia</string>
    <string name="FRANCO_PROFILE_LAB">franco</string>
    <string name="MORFIC_PROFILE_LAB">morfic</string>
    <string name="TRICK_PROFILE_LAB">trick</string>
    <string name="LG_PROFILE_LAB">LG</string>
    <string name="credits">"Special thanks to
- Our great kernel devs
- Our donators, epecially diggmc@xda
- stericson for busybox and RootTools
- koush for AsyncHttpClient and Ion
- grilledbacon and Nate Gantt for your beautiful icons
- Beta testers for your dedication in testing this"</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="apply">Apply</string>
    <string name="set">Set</string>
    <string name="send">Send</string>
    <string name="donate">More info</string>
    <string name="pref_sob">Set On Boot</string>
    <string name="pref_sob_kernel_settings">Kernel Settings</string>
    <string name="pref_sob_notification">Notification</string>
    <string name="pref_sob_delay">Delay (sec): %1$s</string>
    <string name="pref_agp">Apply Grace Period</string>
    <string name="pref_agp_duration">Duration (min): %1$s</string>
    <string name="pref_display">Display</string>
    <string name="pref_temp_unit">Temp Unit</string>
    <string name="pref_icon">Icon</string>
    <string name="pref_language">Language</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_disabled_item">Disabled</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_bug_report">Bug Report!</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_about">About</string>
    <string name="menu_websites">Websites</string>
    <string name="menu_homepage">Homepage</string>
    <string name="menu_user_community">User Community</string>
    <string name="menu_changelog">Changelog</string>
    <string name="menu_translate">Help us translate</string>
    <string name="set_on_boot_canceled_new_settings">Set on boot canceled because of new settings applied during delay period</string>
    <string name="set_on_boot_completed">Set on boot completed</string>
    <string name="set_on_boot_error">Dirty shutdown: click here to decide</string>
    <string name="set_on_boot_error_query">A previous improper shutdown detected. Do you want to apply previous settings?</string>
    <string name="set_on_boot_config">New config: click here to decide</string>
    <string name="set_on_boot_config_query">"New kernel or device detected, do you want to apply previous settings? 
WARNING: Generally, it's fine if previous kernel is another version of current kernel. Otherwise, it's better to retweak from scratch to avoid undesirable problems. If you do this, saved settings are cleared anyway, please confirm (reapply) it in the app to keep them for next boot."</string>
    <string name="bug_report">Report</string>
    <string name="bug_report_log_file_creation_error">"Log file can't be created due to unmounted SDCard or storage error"</string>
    <string name="message_config_na">This control is not available</string>
    <string name="message_install_root_error">Trickster MOD app needs a rooted phone and root access</string>
    <string name="message_select_email_client">Select email client</string>
    <string name="message_install_androidpit">Please install AndroidPIT App Center to get the donate key to also unlock extra features</string>
    <string name="message_update_donate_key">Please update your donate key to the latest version</string>
    <string name="message_license_androidpit">Please login to your AndroidPIT account in the App Center to authenticate your donation</string>
    <string name="message_license_error">Unable to contact Licensing Server: Internet access is unavailable or Server failure. If it is the former, enable Internet and relaunch the app</string>
    <string name="message_donated">Thanks for your donation ;)</string>
    <string name="message_wakelock_perm_na">This feature requires WakeLock permission, did you revoke it?</string>
    <string name="workinprogress_feature">This is a donate feature. Please consider supporting us.</string>
    <string name="set_offset_for">Set Offset For %1$s</string>
    <string name="settings_apply_sucessfully">Apply Successfully</string>
    <string name="settings_apply_error">Errored, Get Bug Report For Dev</string>
    <string name="device_infos">&lt;b>Device:&lt;/b> %1$s&lt;br>&lt;b>Codename:&lt;/b> %2$s&lt;br>&lt;b>Kernel:&lt;/b> %3$s</string>
    <string name="faq">FAQ</string>
    <string name="device_status">Device Status</string>
    <string name="corex">Core %1$d: %2$s%3$s</string>
    <string name="gpu_freq">GPU: %1$sMHz</string>
    <string name="cpu_usage">CPU Usage: %1$d%%</string>
    <string name="mem_stats">Mem Usage: %1$s / %2$sMB</string>
    <string name="offline">Offline</string>
    <string name="battery_temp">Battery temperature: %1$s%3$s - Health: %2$s</string>
    <string name="battery_status">;Unknown;Good;Overheat;Dead;Unspecified failure;Cold</string>
    <string name="cpu_temp">CPU temperature: %1$s%2$s</string>
    <string name="core_vol">Core: %1$dmV</string>
    <string name="iva_vol">IVA: %1$dmV</string>
    <string name="mpu_vol">MPU: %1$dmV</string>
    <string name="cpu_stats">CPU Stats</string>
    <string name="warp_counters">Warp Counters</string>
    <string name="deep_sleep">Deep Sleep</string>
    <string name="total_state_time">Total State Time</string>
    <string name="not_used_states">Not Used States</string>
    <string name="time_in_state">Time In State</string>
    <string name="state_text">%1$s%2$s: %3$s (%4$d%%)</string>
    <string name="hhmmss">%1$02d:%2$02d:%3$02d</string>
    <string name="dd_hhmmss">%1$d day %2$02d:%3$02d:%4$02d</string>
    <string name="dds_hhmmss">%1$d days %2$02d:%3$02d:%4$02d</string>
    <string name="cpu_stats_na_kernel">Information is not available due to kernel</string>
    <string name="adb_over_wifi">ADB over WIFI</string>
    <string name="adb_wireless_port">ADB Wireless Port</string>
    <string name="adb_wireless_status">ADB Wireless: %1$s:%2$s</string>
    <string name="app_ops_launcher">App Ops Launcher</string>
    <string name="app_ops_launcher_tip">Launch hidden App Ops in Android 4.3 to manage app permissions</string>
    <string name="app_ops">App Ops</string>
    <string name="backup_restore_kernel">Kernel Backup / Restore</string>
    <string name="wifi_required">This feature requires active WIFI connection</string>
    <string name="keep_screen_on_when_active">Keep screen on when active</string>
    <string name="bootloader_lock_state">Bootloader Lock State</string>
    <string name="bootloader_lock_tip">Use this tool to lock and unlock your bootloader without fastboot and data wipe. If the button is grayed out then something is wrong with the detection, contact dev</string>
    <string name="profile">Profile</string>
    <string name="profile_none">(unnamed)</string>
    <string name="profile_name_empty">Profile name cannot be empty</string>
    <string name="new_profile">New Profile</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="delete_selected_profile">Delete selected profile?</string>
    <string name="restore">Restore</string>
    <string name="backup">Backup</string>
    <string name="location">Location</string>
    <string name="backup_kernel_dir_create_error">Invalid kernel backup directory, SDCard problem or path entered is not valid</string>
    <string name="no_backup_kernel_found">No backup kernel found</string>
    <string name="backup_kernel_dir_exists_error">Backup Location exists but is not a directory</string>
    <string name="backup_kernel_filename_empty_error">Backup kernel filename cannot be empty</string>
    <string name="backup_successfully">Backup successfully</string>
    <string name="restore_successfully">Restore successfully, reboot your device for the change to take effect</string>
    <string name="delete_successfully">Delete successfully</string>
    <string name="delete_kernel_file_error">Delete errored. Your phone sdcard might have file system problem</string>
    <string name="unable_to_find_kernel_file">Unable to find kernel file</string>
    <string name="backup_restore_kernel_tip">"- This feature requires writable /boot and /system partitions (IOW some HTC devices are not supported)
- Do not restore backups by this app with other apps, you might BRICK your device"</string>
    <string name="restore_kernel_warning">Are you sure your device is a &lt;b>%1$s&lt;/b>, otherwise this feature might &lt;b>BRICK&lt;/b> your device?</string>
    <string name="backing_up_kernel">Backing up Kernel…</string>
    <string name="restoring_kernel">Restoring Kernel…</string>
    <string name="backup_kernel_filename_invalid_error">Error: Kernel backup filename is invalid. Please enter a valid file name</string>
    <string name="kernel_backup_file_exists_error">Kernel backup file existed but is a directory, delete this directory or use a different backup file name</string>
    <string name="device_hostname">Device Hostname</string>
    <string name="device_hostname_tip">Use this tool to set device hostname</string>
    <string name="error_hostname_cannot_be_empty">Error: Hostname cannot be empty</string>
    <string name="hostname_set_successfully">Hostname set successfully</string>
    <string name="hostname_set_failed">Hostname set failed. Was something wrong with your set hostname?</string>
    <string name="n4_color_setter_title">LCD Color Presets</string>
    <string name="n4_color_setter_tip">Use this tool to set your LCD color to a preset overriding your current color and gamma configuration. Be advised that this tool is simply used to set preset and it does not reflect your current preset</string>
    <string name="delay_seconds">Delay (second)</string>
    <string name="apply_grace_period_minutes">Apply Grace Period (minute)</string>
    <string name="donate_with">Donate With</string>
    <string name="sysctl_editor">SysCtl Editor</string>
    <string name="sysctl_editor_tip">This tool let you tweak various kernel parameters from fs, kernel, net to vm…</string>
</resources>