<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:text="@string/backup_restore_kernel" style="@style/GroupLabel" />
    <include layout="@layout/view_separator" />
    <TextView android:textStyle="italic" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/backup_restore_kernel_tip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="3.0" style="?android:attr/buttonBarStyle">
        <Button android:ellipsize="end" android:id="@id/btnLocation" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/location" android:maxLines="1" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
        <Button android:ellipsize="end" android:id="@id/btnBackup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/backup" android:maxLines="1" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
        <Button android:ellipsize="end" android:id="@id/btnRestore" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/restore" android:maxLines="1" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</merge>