<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/cpu_stats" android:layout_toLeftOf="@id/checkWarpCounter" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" style="@style/GroupLabel" />
        <CheckBox android:id="@id/checkWarpCounter" android:layout_width="wrap_content" android:layout_height="26.0sp" android:text="@string/warp_counters" android:layout_toLeftOf="@id/btnRefreshCpuStats" android:layout_alignParentBottom="true" />
        <ImageButton android:id="@id/btnRefreshCpuStats" android:layout_width="50.0dip" android:layout_height="26.0sp" android:src="?ic_refresh" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" style="?android:attr/buttonBarButtonStyle" />
    </RelativeLayout>
    <include layout="@layout/view_separator" />
    <TextView android:textStyle="italic" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/total_state_time" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:layout_gravity="center" android:id="@id/textTotalStateTime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" />
    <TextView android:textStyle="italic" android:id="@id/labelNotUsedStates" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/not_used_states" />
    <TextView android:id="@id/textNotUsedStates" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" />
    <TextView android:textStyle="italic" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/time_in_state" />
    <LinearLayout android:orientation="vertical" android:id="@id/viewCpuStats" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</merge>