<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:text="@string/n4_color_setter_title" style="@style/GroupLabel" />
    <include layout="@layout/view_separator" />
    <TextView android:textStyle="italic" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/n4_color_setter_tip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="3.0">
        <Spinner android:entries="@array/n4_color_presets" android:id="@id/spnN4ColPre" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="2.0" />
        <Button android:ellipsize="end" android:id="@id/btnSet" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/set" android:maxLines="1" android:layout_weight="1.0" />
    </LinearLayout>
</merge>