<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/adb_over_wifi" android:layout_toLeftOf="@id/switchAdbWireless" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" style="@style/GroupLabel" />
        <Switch android:id="@id/switchAdbWireless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <include layout="@layout/view_separator" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="left" android:id="@id/textPort" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adb_wireless_port" android:layout_toLeftOf="@id/editAdbWirelessPort" android:layout_alignBaseline="@id/editAdbWirelessPort" android:layout_alignParentLeft="true" />
        <EditText android:id="@id/editAdbWirelessPort" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:inputType="number" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="left" android:id="@id/textAdbKeepScreen" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/keep_screen_on_when_active" android:layout_toLeftOf="@id/checkKeepScreen" android:layout_alignBaseline="@id/checkKeepScreen" android:layout_alignParentLeft="true" />
        <Switch android:id="@id/checkKeepScreen" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" />
    </RelativeLayout>
</merge>